--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,18 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+    <link 
+      rel="stylesheet" 
+      media="print" 
+      onload="this.onload=null;this.removeAttribute('media');" 
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
+    >
+    <link 
+      rel="stylesheet" 
+      media="print" 
+      onload="this.onload=null;this.removeAttribute('media');" 
+      href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap"
+    >
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
